--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+textual = "^0.1.18"
 
 [tool.poetry.dev-dependencies]
 pylint = "2.15.3"
