--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ pylint = "2.15.3"
 pdoc = "^12.2.0"
 black = "^22.8.0"
 
+[tool.poetry.group.dev.dependencies]
+black = {version = "^22.10.0", allow-prereleases = true}
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
